--- a/notebooks/soft_q_gridsearch.ipynb
+++ b/notebooks/soft_q_gridsearch.ipynb
@@ -67,14 +67,12 @@
     "\n",
     "# Add parameter search;\n",
     "parameters = {\n",
-    "    'snr': [0.5, 1, 2, 5, 10],\n",
-    "    'n_bins': [30],\n",
-    "    'q_mean': [0],\n",
-    "    'q_sigma': [0.1],\n",
-    "    'kernel_size': [15],\n",
-    "    'kernel_sigma': [1.0, 2.0, 3.0, 5.0],\n",
-    "    'learning_rate': [0.1, 0.3, 0.5, 0.8, 0.9, 0.95, 0.99],\n",
-    "    'temperature': [1e-5, 0.001, 0.01, 0.05, 0.1, 0.3, 0.5, 0.8, 1.0],\n",
+    "    'snr': [0.5, 1, 3, 5, 10],\n",
+    "    'n_bins': [10],\n",
+    "    'kernel_size': [10],\n",
+    "    'kernel_sigma': [0.5, 1.0, 2.0, 3.0, 4.0],\n",
+    "    'learning_rate': [0.05, 0.1, 0.3, 0.5, 0.8, 0.9],\n",
+    "    'temperature': [0.1],\n",
     "    'min_temperature': [1e-5],\n",
     "    'max_temperature': [1.0],\n",
     "    'reduce_temperature': [False],\n",
@@ -116,7 +114,7 @@
     "    results = []\n",
     "    for current_iteration in range(n_iter):\n",
     "        # set seed for the Q-table initialization;\n",
-    "        rng = np.random.default_rng(seed=current_iteration)\n",
+    "        # rng = np.random.default_rng(seed=current_iteration)\n",
     "\n",
     "        # load the checkerboard environment;\n",
     "        if env is None:\n",
@@ -131,7 +129,7 @@
     "        BINS = create_bins(NUM_BINS)\n",
     "\n",
     "        q_table_shape = (NUM_BINS, NUM_BINS)  # contrast * frequency;\n",
-    "        q_table = rng.normal(params[\"q_mean\"], params[\"q_sigma\"], q_table_shape)\n",
+    "        q_table = np.ones(q_table_shape)*0.5\n",
     "        kernel = generate_gaussian_kernel(params[\"kernel_size\"], params[\"kernel_sigma\"])\n",
     "\n",
     "        model = SoftQAgent(\n",
@@ -167,6 +165,7 @@
     "\n",
     "            # compute next q-value and update q-table;\n",
     "            model.q_table = model.update_q_table(reward, next_state_discrete, old_q_value)\n",
+    "            optimum = model.q_table[9, 6]\n",
     "\n",
     "            # update state;\n",
     "            discrete_state = next_state_discrete\n",
@@ -178,7 +177,7 @@
     "            # collect the data;\n",
     "            current_row = []\n",
     "            current_row.extend(list(params.values()))\n",
-    "            current_row.extend([reward, current_epoch, current_iteration])\n",
+    "            current_row.extend([reward, optimum, current_epoch, current_iteration])\n",
     "            #current_row = np.array(current_row, dtype=object)\n",
     "\n",
     "            # save the data;\n",
@@ -230,8 +229,6 @@
        "      <th></th>\n",
        "      <th>snr</th>\n",
        "      <th>n_bins</th>\n",
-       "      <th>q_mean</th>\n",
-       "      <th>q_sigma</th>\n",
        "      <th>kernel_size</th>\n",
        "      <th>kernel_sigma</th>\n",
        "      <th>learning_rate</th>\n",
@@ -241,6 +238,7 @@
        "      <th>reduce_temperature</th>\n",
        "      <th>decay_rate</th>\n",
        "      <th>reward</th>\n",
+       "      <th>optimum</th>\n",
        "      <th>epochs</th>\n",
        "      <th>iteration</th>\n",
        "    </tr>\n",
@@ -249,90 +247,85 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00001</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.538772</td>\n",
+       "      <td>2.685902</td>\n",
+       "      <td>0.500005</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00001</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>1.396779</td>\n",
+       "      <td>2.491344</td>\n",
+       "      <td>0.500005</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00001</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-2.525203</td>\n",
+       "      <td>0.138672</td>\n",
+       "      <td>0.500005</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00001</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.529220</td>\n",
+       "      <td>1.007868</td>\n",
+       "      <td>0.500005</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00001</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.465493</td>\n",
+       "      <td>-0.222912</td>\n",
+       "      <td>0.500005</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -352,144 +345,138 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12599995</th>\n",
+       "      <th>1499995</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.00000</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.151588</td>\n",
+       "      <td>0.980909</td>\n",
+       "      <td>2.257767</td>\n",
        "      <td>95.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12599996</th>\n",
+       "      <th>1499996</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.00000</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.003628</td>\n",
+       "      <td>0.894829</td>\n",
+       "      <td>1.251095</td>\n",
        "      <td>96.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12599997</th>\n",
+       "      <th>1499997</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.00000</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-0.085264</td>\n",
+       "      <td>0.781779</td>\n",
+       "      <td>1.019667</td>\n",
        "      <td>97.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12599998</th>\n",
+       "      <th>1499998</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.00000</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-0.053025</td>\n",
+       "      <td>0.727417</td>\n",
+       "      <td>0.368479</td>\n",
        "      <td>98.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12599999</th>\n",
+       "      <th>1499999</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.00000</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.365773</td>\n",
+       "      <td>0.871712</td>\n",
+       "      <td>0.383831</td>\n",
        "      <td>99.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12600000 rows × 15 columns</p>\n",
+       "<p>1500000 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           snr  n_bins  q_mean  q_sigma  kernel_size  kernel_sigma  \\\n",
-       "0          0.5    30.0     0.0      0.1         15.0           1.0   \n",
-       "1          0.5    30.0     0.0      0.1         15.0           1.0   \n",
-       "2          0.5    30.0     0.0      0.1         15.0           1.0   \n",
-       "3          0.5    30.0     0.0      0.1         15.0           1.0   \n",
-       "4          0.5    30.0     0.0      0.1         15.0           1.0   \n",
-       "...        ...     ...     ...      ...          ...           ...   \n",
-       "12599995  10.0    30.0     0.0      0.1         15.0           5.0   \n",
-       "12599996  10.0    30.0     0.0      0.1         15.0           5.0   \n",
-       "12599997  10.0    30.0     0.0      0.1         15.0           5.0   \n",
-       "12599998  10.0    30.0     0.0      0.1         15.0           5.0   \n",
-       "12599999  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "          snr  n_bins  kernel_size  kernel_sigma  learning_rate  temperature  \\\n",
+       "0         0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "1         0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "2         0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "3         0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "4         0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "...       ...     ...          ...           ...            ...          ...   \n",
+       "1499995  10.0    10.0         10.0           4.0           0.90          0.1   \n",
+       "1499996  10.0    10.0         10.0           4.0           0.90          0.1   \n",
+       "1499997  10.0    10.0         10.0           4.0           0.90          0.1   \n",
+       "1499998  10.0    10.0         10.0           4.0           0.90          0.1   \n",
+       "1499999  10.0    10.0         10.0           4.0           0.90          0.1   \n",
        "\n",
-       "          learning_rate  temperature  min_temperature  max_temperature  \\\n",
-       "0                  0.10      0.00001          0.00001              1.0   \n",
-       "1                  0.10      0.00001          0.00001              1.0   \n",
-       "2                  0.10      0.00001          0.00001              1.0   \n",
-       "3                  0.10      0.00001          0.00001              1.0   \n",
-       "4                  0.10      0.00001          0.00001              1.0   \n",
-       "...                 ...          ...              ...              ...   \n",
-       "12599995           0.99      1.00000          0.00001              1.0   \n",
-       "12599996           0.99      1.00000          0.00001              1.0   \n",
-       "12599997           0.99      1.00000          0.00001              1.0   \n",
-       "12599998           0.99      1.00000          0.00001              1.0   \n",
-       "12599999           0.99      1.00000          0.00001              1.0   \n",
+       "         min_temperature  max_temperature  reduce_temperature  decay_rate  \\\n",
+       "0                0.00001              1.0                 0.0       0.001   \n",
+       "1                0.00001              1.0                 0.0       0.001   \n",
+       "2                0.00001              1.0                 0.0       0.001   \n",
+       "3                0.00001              1.0                 0.0       0.001   \n",
+       "4                0.00001              1.0                 0.0       0.001   \n",
+       "...                  ...              ...                 ...         ...   \n",
+       "1499995          0.00001              1.0                 0.0       0.001   \n",
+       "1499996          0.00001              1.0                 0.0       0.001   \n",
+       "1499997          0.00001              1.0                 0.0       0.001   \n",
+       "1499998          0.00001              1.0                 0.0       0.001   \n",
+       "1499999          0.00001              1.0                 0.0       0.001   \n",
        "\n",
-       "          reduce_temperature  decay_rate    reward  epochs  iteration  \n",
-       "0                        0.0       0.001  0.538772     0.0        0.0  \n",
-       "1                        0.0       0.001  1.396779     1.0        0.0  \n",
-       "2                        0.0       0.001 -2.525203     2.0        0.0  \n",
-       "3                        0.0       0.001  0.529220     3.0        0.0  \n",
-       "4                        0.0       0.001  0.465493     4.0        0.0  \n",
-       "...                      ...         ...       ...     ...        ...  \n",
-       "12599995                 0.0       0.001  0.151588    95.0       99.0  \n",
-       "12599996                 0.0       0.001  0.003628    96.0       99.0  \n",
-       "12599997                 0.0       0.001 -0.085264    97.0       99.0  \n",
-       "12599998                 0.0       0.001 -0.053025    98.0       99.0  \n",
-       "12599999                 0.0       0.001  0.365773    99.0       99.0  \n",
+       "           reward   optimum  epochs  iteration  \n",
+       "0        2.685902  0.500005     0.0        0.0  \n",
+       "1        2.491344  0.500005     1.0        0.0  \n",
+       "2        0.138672  0.500005     2.0        0.0  \n",
+       "3        1.007868  0.500005     3.0        0.0  \n",
+       "4       -0.222912  0.500005     4.0        0.0  \n",
+       "...           ...       ...     ...        ...  \n",
+       "1499995  0.980909  2.257767    95.0       99.0  \n",
+       "1499996  0.894829  1.251095    96.0       99.0  \n",
+       "1499997  0.781779  1.019667    97.0       99.0  \n",
+       "1499998  0.727417  0.368479    98.0       99.0  \n",
+       "1499999  0.871712  0.383831    99.0       99.0  \n",
        "\n",
-       "[12600000 rows x 15 columns]"
+       "[1500000 rows x 14 columns]"
       ]
      },
      "execution_count": 5,
@@ -500,7 +487,7 @@
    "source": [
     "# generate data columns;\n",
     "param_columns = list(parameter_combinations[0])\n",
-    "add_columns = [\"reward\", \"epochs\", \"iteration\"]\n",
+    "add_columns = [\"reward\", \"optimum\", \"epochs\", \"iteration\"]\n",
     "columns = param_columns + add_columns\n",
     "\n",
     "# save and print data;\n",
@@ -508,6 +495,13 @@
     "data.to_pickle(\"./results/data.pkl\")\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
