--- a/notebooks/test_agent.ipynb
+++ b/notebooks/test_agent.ipynb
@@ -100,16 +100,16 @@
     "    \n",
     "    return board, inverse, cross\n",
     "\n",
-    "def euclidean_2D_1(x, v):\n",
+    "def euclidean_2D(x, v):\n",
     "    x = np.array(x)\n",
     "    v = np.array(v)\n",
     "    distance = np.linalg.norm(x - v, axis=1)\n",
     "    return np.mean(distance)\n",
     "\n",
-    "def test_convergence_1(maxima, current_window_size):\n",
+    "def test_convergence(maxima, current_window_size):\n",
     "    previous_window = maxima[-current_window_size:-1]\n",
     "    current_window = maxima[-(current_window_size - 1):]\n",
-    "    return euclidean_2D_1(previous_window, current_window)\n"
+    "    return euclidean_2D(previous_window, current_window)\n"
    ]
   },
   {
