--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -42,16 +42,13 @@
     }
    ],
    "source": [
-    "#### Parameter grid #### OLD!!!\n",
     "parameters = {\n",
-    "    'snr': [0.5, 1, 2, 5, 10],\n",
-    "    'n_bins': [30],\n",
-    "    'q_mean': [0],\n",
-    "    'q_sigma': [0.1],\n",
-    "    'kernel_size': [15],\n",
-    "    'kernel_sigma': [1.0, 2.0, 3.0, 5.0],\n",
-    "    'learning_rate': [0.1, 0.3, 0.5, 0.8, 0.9, 0.95, 0.99],\n",
-    "    'temperature': [1e-5, 0.001, 0.01, 0.05, 0.1, 0.3, 0.5, 0.8, 1.0],\n",
+    "    'snr': [0.5, 1, 3, 5, 10],\n",
+    "    'n_bins': [10],\n",
+    "    'kernel_size': [10],\n",
+    "    'kernel_sigma': [0.5, 1.0, 2.0, 3.0, 4.0],\n",
+    "    'learning_rate': [0.05, 0.1, 0.3, 0.5, 0.8, 0.9],\n",
+    "    'temperature': [0.1],\n",
     "    'min_temperature': [1e-5],\n",
     "    'max_temperature': [1.0],\n",
     "    'reduce_temperature': [False],\n",
