--- a/notebooks/soft_q_gridsearch.ipynb
+++ b/notebooks/soft_q_gridsearch.ipynb
@@ -69,10 +69,10 @@
     "parameters = {\n",
     "    'snr': [0.5, 1, 2, 3, 5],\n",
     "    'n_bins': [10],\n",
-    "    'kernel_size': [10],\n",
+    "    'kernel_size': [20],\n",
     "    'kernel_sigma': [0.5, 1.0, 2.0, 3.0, 4.0],\n",
-    "    'learning_rate': [0.05, 0.1, 0.3, 0.5, 0.8, 0.9],\n",
-    "    'temperature': [0.1],\n",
+    "    'learning_rate': [0.05, 0.1, 0.3, 0.4, 0.8, 0.9],\n",
+    "    'temperature': [0.2],\n",
     "    'min_temperature': [1e-5],\n",
     "    'max_temperature': [1.0],\n",
     "    'reduce_temperature': [False],\n",
@@ -149,9 +149,10 @@
     "\n",
     "        # fit the model;\n",
     "        for current_epoch in range(n_epochs):\n",
-    "            action = model.soft_q_action_selection()\n",
+    "            if current_epoch == 0: \n",
+    "                action = initial_state\n",
     "\n",
-    "            (next_state,\n",
+    "            (observation,\n",
     "             reward,\n",
     "             terminated,\n",
     "             truncated,\n",
@@ -160,14 +161,15 @@
     "            # grab current q-value;\n",
     "            old_q_value = model.q_table[discrete_state]\n",
     "\n",
-    "            # discretize the next state;\n",
-    "            next_state_discrete = discretize_observation(next_state, BINS)\n",
-    "\n",
     "            # compute next q-value and update q-table;\n",
-    "            model.q_table = model.update_q_table(reward, next_state_discrete, old_q_value)\n",
+    "            model.q_table = model.update_q_table(reward, discrete_state, old_q_value)\n",
     "            optimum = model.q_table[9, 6]\n",
+    "            \n",
+    "            # get_next action;\n",
+    "            action = model.soft_q_action_selection()\n",
     "\n",
-    "            # update state;\n",
+    "            # update and discretize the next state;\n",
+    "            next_state_discrete = discretize_observation(action, BINS)\n",
     "            discrete_state = next_state_discrete\n",
     "\n",
     "            # by default keep temperature constant;\n",
@@ -248,15 +250,15 @@
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-1.111375</td>\n",
+       "      <td>-0.017057</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -265,16 +267,16 @@
        "      <th>1</th>\n",
        "      <td>0.5</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-3.800239</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>3.059980</td>\n",
+       "      <td>0.517323</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -282,16 +284,16 @@
        "      <th>2</th>\n",
        "      <td>0.5</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.376775</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>-0.546957</td>\n",
+       "      <td>0.517323</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -299,16 +301,16 @@
        "      <th>3</th>\n",
        "      <td>0.5</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>-0.182804</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>-0.978075</td>\n",
+       "      <td>0.517323</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -316,16 +318,16 @@
        "      <th>4</th>\n",
        "      <td>0.5</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>2.423674</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>-0.975311</td>\n",
+       "      <td>0.517323</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -350,16 +352,16 @@
        "      <th>1499995</th>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.716422</td>\n",
-       "      <td>0.790987</td>\n",
+       "      <td>0.609549</td>\n",
+       "      <td>1.059839</td>\n",
        "      <td>95.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -367,16 +369,16 @@
        "      <th>1499996</th>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.372246</td>\n",
-       "      <td>0.540938</td>\n",
+       "      <td>0.557728</td>\n",
+       "      <td>0.911005</td>\n",
        "      <td>96.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -384,16 +386,16 @@
        "      <th>1499997</th>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.500382</td>\n",
-       "      <td>1.699157</td>\n",
+       "      <td>0.736853</td>\n",
+       "      <td>0.689414</td>\n",
        "      <td>97.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -401,16 +403,16 @@
        "      <th>1499998</th>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.935669</td>\n",
-       "      <td>1.050342</td>\n",
+       "      <td>0.464058</td>\n",
+       "      <td>0.526931</td>\n",
        "      <td>98.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -418,16 +420,16 @@
        "      <th>1499999</th>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0.00001</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.943192</td>\n",
-       "      <td>1.190345</td>\n",
+       "      <td>-0.121577</td>\n",
+       "      <td>0.523430</td>\n",
        "      <td>99.0</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -438,17 +440,17 @@
       ],
       "text/plain": [
        "         snr  n_bins  kernel_size  kernel_sigma  learning_rate  temperature  \\\n",
-       "0        0.5    10.0         10.0           0.5           0.05          0.1   \n",
-       "1        0.5    10.0         10.0           0.5           0.05          0.1   \n",
-       "2        0.5    10.0         10.0           0.5           0.05          0.1   \n",
-       "3        0.5    10.0         10.0           0.5           0.05          0.1   \n",
-       "4        0.5    10.0         10.0           0.5           0.05          0.1   \n",
+       "0        0.5    10.0         20.0           0.5           0.05          0.2   \n",
+       "1        0.5    10.0         20.0           0.5           0.05          0.2   \n",
+       "2        0.5    10.0         20.0           0.5           0.05          0.2   \n",
+       "3        0.5    10.0         20.0           0.5           0.05          0.2   \n",
+       "4        0.5    10.0         20.0           0.5           0.05          0.2   \n",
        "...      ...     ...          ...           ...            ...          ...   \n",
-       "1499995  5.0    10.0         10.0           4.0           0.90          0.1   \n",
-       "1499996  5.0    10.0         10.0           4.0           0.90          0.1   \n",
-       "1499997  5.0    10.0         10.0           4.0           0.90          0.1   \n",
-       "1499998  5.0    10.0         10.0           4.0           0.90          0.1   \n",
-       "1499999  5.0    10.0         10.0           4.0           0.90          0.1   \n",
+       "1499995  5.0    10.0         20.0           4.0           0.90          0.2   \n",
+       "1499996  5.0    10.0         20.0           4.0           0.90          0.2   \n",
+       "1499997  5.0    10.0         20.0           4.0           0.90          0.2   \n",
+       "1499998  5.0    10.0         20.0           4.0           0.90          0.2   \n",
+       "1499999  5.0    10.0         20.0           4.0           0.90          0.2   \n",
        "\n",
        "         min_temperature  max_temperature  reduce_temperature  decay_rate  \\\n",
        "0                0.00001              1.0                 0.0       0.001   \n",
@@ -464,17 +466,17 @@
        "1499999          0.00001              1.0                 0.0       0.001   \n",
        "\n",
        "           reward   optimum  epochs  iteration  \n",
-       "0       -1.111375  0.500000     0.0        0.0  \n",
-       "1       -3.800239  0.500000     1.0        0.0  \n",
-       "2        0.376775  0.500000     2.0        0.0  \n",
-       "3       -0.182804  0.500000     3.0        0.0  \n",
-       "4        2.423674  0.500000     4.0        0.0  \n",
+       "0       -0.017057  0.500000     0.0        0.0  \n",
+       "1        3.059980  0.517323     1.0        0.0  \n",
+       "2       -0.546957  0.517323     2.0        0.0  \n",
+       "3       -0.978075  0.517323     3.0        0.0  \n",
+       "4       -0.975311  0.517323     4.0        0.0  \n",
        "...           ...       ...     ...        ...  \n",
-       "1499995  0.716422  0.790987    95.0       99.0  \n",
-       "1499996  0.372246  0.540938    96.0       99.0  \n",
-       "1499997  0.500382  1.699157    97.0       99.0  \n",
-       "1499998  0.935669  1.050342    98.0       99.0  \n",
-       "1499999  0.943192  1.190345    99.0       99.0  \n",
+       "1499995  0.609549  1.059839    95.0       99.0  \n",
+       "1499996  0.557728  0.911005    96.0       99.0  \n",
+       "1499997  0.736853  0.689414    97.0       99.0  \n",
+       "1499998  0.464058  0.526931    98.0       99.0  \n",
+       "1499999 -0.121577  0.523430    99.0       99.0  \n",
        "\n",
        "[1500000 rows x 14 columns]"
       ]
